<resources>
    <string name="app_name">Animesh</string>
    <string name="api_key">23d877dbfbeb494cb1c656bd7fde770a</string>

    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could\'t get data, please try again!</string>
    <string name="unexpected_error">Unexpected error. Please try again later.</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="search_error">there is no such news name</string>

    <string name="news_details_preview">This is the post details, som/e text to test the appearance of the view</string>
    <string name="news_title_preview">This is the post name</string>
    <string name="news_headline_preview">This is the post headline name</string>
    <string name="news">News</string>

    <string name="no_data">No Data</string>
    <string name="read_more">Read more</string>
    <string name="read_less">Read less</string>

    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="Password" />
    <string name="Login" />
    <string name="Email" />
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="class_name_str">8 \"Б\"</string>
    <string name="about_paragraph1">163002, город Архангельск, улица Урицкого, 9</string>
    <string name="about_title2">Спортзал:</string>
    <string name="about_paragraph2">163002, город Архангельск, проспект Ломоносова , 30</string>
    <string name="about_title3">Места осуществления образовательной деятельности:</string>
    <string name="about_paragraph3">163002, Архангельская область, г. Архангельск, Ломоносовский территориальный округ, пр. Ломоносова, д.30</string>
    <string name="about_title4"><![CDATA[Режим  и график работы работы ОО:]]></string>
    <string name="about_paragraph4">1-11 классы — пятидневная учебная неделя Пн — Пт 8:10 — 17:45</string>
    <string name="about_title5"><![CDATA[Телефон канцелярии: ]]></string>
    <string name="about_paragraph5">47-00-76</string>
    <string name="about_title6">Заместитель директора по УВР:</string>
    <string name="about_paragraph6">47-00-74</string>
    <string name="about_title7">Социальный педагог:</string>
    <string name="about_paragraph7">47-00-74</string>
    <string name="about_title8">Бухгалтерия:</string>
    <string name="about_paragraph8">47-00-55</string>
    <string name="about_title9">Адрес электронной почты:</string>
    <string name="about_paragraph9">office210882@mail.ru</string>
    <string name="class_title1">В МБОУ Гимназия № 21 состоялось открытое занятие по технике безопасности на уроках для студентов заочной формы ВШППиФК</string>
    <string name="class_paragraph1"><![CDATA[В феврале 2024 года на базе МБОУ Гимназия № 21 состоялось открытое занятие для студентов 5 курса заочной формы обучения высшей школы...]]></string>
    <string name="class_title2">ВСЕРОССИЙСКИЙ СОЦИОЛОГИЧЕСКИЙ ДИКТАНТ</string>
    <string name="class_paragraph2">14 ноября 2023 года Всероссийский центр изучения общественного мнения(ВЦИОМ) в четвертый раз проведет общероссийскую акцию Социологический диктант.</string>
    <string name="class_paragraph2_1">О-проведении-Всероссийского-социологического-диктанта.pdf</string>
    <string name="sc_title1">15 апреля будет проводиться пробник по русскому языку!</string>
    <string name="sc_paragraph1">Приходить в 9.00 к 12 кабинету, с собой иметь паспорт, черные гелиевые ручки!</string>


    <!--ANI-contents-->
    <string name="anime_aired">Aired: %1$s</string>
    <string name="page_title">Anisy</string>
    <string name="more">More\n</string>
    <string name="favorite">Favorites</string>
    <string name="tv_anime_about">About anime</string>

    <string name="exp_group_title">Weekend: %1$s</string>
    <string name="exp_group_subtitle">Tap on the header to expand.</string>
</resources>